--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   provider: ^6.1.5+1
   cupertino_icons: ^1.0.8
   mobile_scanner: ^7.1.4
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
