--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   intl: ^0.20.2
   sqflite: ^2.4.2
   path: ^1.9.1
+  image_picker: ^1.2.1
+  
 
 dev_dependencies:
   flutter_test:
